<resources>
    <string name="app_name">BakeLink</string>
    <string name="titleText">BakeLink</string>
    <string name="textSubtitle"><![CDATA[Connecting Bakers & Cake Lovers]]></string>
    <string name="emailHintText">Email address</string>
    <string name="passwordHintText">Password</string>
    <string name="loginText">Get Started</string>
    <string name="textSignUp">Sign Up</string>
    <string name="aboutBakerText">About the Baker</string>
    <string name="servicestext"><![CDATA[Services & Specialities]]></string>
    <string name="cakeSampleText">Cake Samples</string>
    <string name="customerReviewsText">Customer Reviews</string>

    <string name="order_details_title">Order details for %1$s</string>
    <string name="no_orders_for_this_date">No orders for this date</string>


    <string-array name="cake_types">
        <item>Birthday Cake</item>
        <item>Wedding Cake</item>
        <item>Vegan Cake</item>
        <item>Theme Cake</item>
    </string-array>

    <string-array name="weight_types">
        <item>1 lbs</item>
        <item>2 lbs</item>
        <item>3 lbs</item>
        <item>4 lbs</item>
        <item>5 lbs</item>
    </string-array>
</resources>