<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customers.C_HomeActivity">

    <!-- AppBarLayout for top bar -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

        <!-- Toolbar with search field and icons -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <!-- Search Field -->
                <EditText
                    android:id="@+id/search_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Search cakes, bakers..."
                    android:background="@drawable/rounded_search_background"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="4dp"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/chat_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0" />

                <!-- Chat Icon -->
                <ImageButton
                    android:id="@+id/chat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chat"
                    android:contentDescription="Chat"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toStartOf="@+id/bell_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    android:padding="8dp" />

                <!-- Bell Icon -->
                <ImageButton
                    android:id="@+id/bell_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notifications"
                    android:contentDescription="Notifications"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toStartOf="@+id/cart_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    android:padding="8dp" />

                <!-- Cart Icon -->
                <ImageButton
                    android:id="@+id/cart_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cart"
                    android:contentDescription="Cart"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:padding="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="120dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bakerImage"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/baker_a_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBakerTitle"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="TextView"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/heart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Five Star Icons -->
                <ImageView
                    android:id="@+id/star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_star"
                    app:tint="?attr/colorPrimary" />

                <ImageView
                    android:id="@+id/star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_star"
                    app:tint="?attr/colorPrimary" />

                <ImageView
                    android:id="@+id/star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_star"
                    app:tint="?attr/colorPrimary" />

                <ImageView
                    android:id="@+id/star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_star"
                    app:tint="?attr/colorPrimary" />

                <ImageView
                    android:id="@+id/star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_star"
                    app:tint="?attr/colorPrimary" />


                <TextView
                    android:id="@+id/txtBakerRating1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/txtAboutBaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/baloo_2"
                android:text="@string/aboutBakerText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/txtAboutBaker2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/baloo_2"
                android:text="@string/servicestext" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/servicesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:id="@+id/txtCakeSamples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/baloo_2"
                android:text="@string/cakeSampleText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cakeRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:nestedScrollingEnabled="false">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/txtCustomerReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/baloo_2"
                android:text="@string/customerReviewsText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customerReviewRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_request_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_quote"
        app:fabSize="normal"
        app:tint="@android:color/white"
        app:elevation="12dp"/>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>